# moju

./: .gitignore  CHANGELOG.md  LICENSE  README.md  VERSIONING.md  pixi.toml  pyproject.toml
.github/workflows/: publish-pypi.yml  tests.yml
.streamlit/: config.toml
apps/: __init__.py
apps/moju_studio/: Home.py  README.md  __init__.py  config_forms.py  studio_core.py  studio_io.py  studio_plots.py  studio_streamlit_extras.py
apps/moju_studio/pages/: 1_Audit.py  2_Quick_start.py  3_Help.py
docs/: LAUNCH_ANNOUNCEMENT.md  PUBLISHING.md  README.md  before-after-moju.md  index.html
docs/doc/: groups.html  laws.html  models.html  operators.html  overview.html  style.css
examples/: cfd_snapshot_cookbook_heat_1d.py  cookbook_constitutive_implied_ideal_gas_rho.py  cookbook_constitutive_implied_power_law_fn.py  cookbook_constitutive_k_epsilon.py  cookbook_constitutive_k_omega.py  cookbook_constitutive_smagorinsky.py  cookbook_path_b_fd_audit_pe.py  cookbook_path_b_fd_law_laplace.py  cookbook_pi_constant_prandtl.py  cookbook_pi_constant_reynolds.py  cookbook_turbulence_colebrook.py  cookbook_turbulence_law_of_wall.py  monitor_burgers_end_to_end.py  monitor_chain_spatial_demo.py  monitor_chain_temporal_demo.py  monitor_heat_end_to_end.py  monitor_laws_demo.py  monitor_state_ref_from_hdf5_demo.py  monitor_state_ref_from_openfoam_demo.py  monitor_state_ref_from_vtu_demo.py  monitor_state_ref_from_xarray_demo.py  slab_cooling_demo.py
moju/: __init__.py  torch_interop.py
moju/monitor/: __init__.py  auditor.py  closure_registry.py  config.py  constitutive_closures.py  derivative_keys.py  law_fd_recipes.py  path_b_derivatives.py  pi_constant_recipes.py  report.py  scaling_closures.py  state_builder.py  state_ref.py  visualize_plotly.py
moju/piratio/: __init__.py  auditor.py  groups.py  laws.py  models.py  operators.py
scripts/: generate_sample_audit_pdf.py  torch_laws_jax2torch_example.py
src/moju/: __init__.py
src/moju/piratio/: groups.py  models.py
tests/: __init__.py  conftest.py  test_auditor.py  test_config_forms.py  test_examples_implied_cookbooks.py  test_examples_path_b_fd_cookbooks.py  test_examples_pi_constant_cookbooks.py  test_examples_turbulence_cookbooks.py  test_groups.py  test_imports.py  test_law_fd_recipes.py  test_laws.py  test_models.py  test_operators.py  test_path_b_derivatives.py  test_pi_constant_recipes.py  test_readme_examples.py  test_state_ref.py  test_state_ref_hdf5.py  test_state_ref_meshio.py  test_studio_io.py  test_studio_pi_gating.py  test_torch_interop.py
