[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moju"
version = "0.1.3"
description = "Supervised Physics scaling and modeling for SciML."
readme = "README.md"
authors = [{ name = "Ifimo Lab", email = "lab@ifimoanalytics.com" }]
maintainers = [
  { name = "Ifimo Analytics", email = "info@ifimoanalytics.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["physics", "jax", "sciml", "pinn", "dimensionless", "cfd", "differentiable", "residual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.20.0"
]

[project.optional-dependencies]
units = ["pint>=0.20"]
dev = ["pytest", "black", "ruff"]
torch = ["torch>=2.0.0", "jax2torch>=0.0.7"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
